--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -157,7 +157,7 @@ body {
   .masthead,
   .mastfoot,
   .cover-container {
-    width: 62rem;
+    width: 65rem;
   }
 }
 
@@ -177,8 +177,8 @@ body {
 }
 
 .app-nav span {
-  margin-left: 15px;
-  margin-right: 15px;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 #background {
@@ -202,4 +202,17 @@ body {
 .app-text {
   color: white;
   text-shadow: -1px 0 black , 0 -1px black, 1px 0 black, 0 1px black;
+}
+
+.tech-news {
+  color: black;
+  margin: 20px;
+}
+
+.tech-news a{
+  color: green;
+}
+
+.tech-news > .card {
+  padding: 1px;
 }
