--- a/app/assets/stylesheets/blogs.scss
+++ b/app/assets/stylesheets/blogs.scss
@@ -158,6 +158,7 @@ h6, .h6 {
  */
 
 .blog-footer {
+  margin-top: 20px;
   padding: 2.5rem 0;
   color: #999;
   text-align: center;
@@ -174,4 +175,19 @@ h6, .h6 {
 
 .social-links li{
   font-size: 2.5em;
+}
+
+.comment-card > .card {
+  margin-top: 15px;
+}
+
+.comment-attribution{
+  font-size: .8em;
+  font-style: italic;
+  margin-top: 10px;
+  text-align: right;
+}
+
+.comment-name{
+  font-weight: 700;
 }
