--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -2,13 +2,13 @@
     
   <h2><%= @blog.title %></h2>
 
-  <%= link_to 'Editar', edit_blog_path(@blog) if logged_in?(:site_admin)%>
+  <%= link_to 'Edit', edit_blog_path(@blog) if logged_in?(:site_admin)%>
   
   <p><%= @blog.body %></p>
 
   <%= render 'comments/comment_form' %>
   
-  <div class="comments" data-blog-id="<%= @blog.id %>">
+  <div id="comments" data-blog-id="<%= @blog.id %>">
     <%= render @blog.comments%>
   </div>
 
