--- a/app/views/shared/_blog_masthead.html.erb
+++ b/app/views/shared/_blog_masthead.html.erb
@@ -1,7 +1,7 @@
 <div class="blog-header">
   <div class="container">
     <h1 class="blog-title">Mi Blog</h1>
-    <p class="lead blog-description">An example blog template built with Bootstrap.</p>
+    <p class="lead blog-description">Sed fugit interea, fugit irreparabile tempus, singula dum capti cincumvectamur amore.</p>
     <%= link_to 'Escribir nuevo artículo del blog', new_blog_path if logged_in?(:site_admin)%>
   </div>
 </div>
