--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -13,7 +13,13 @@
     <%= form.text_area :body, id: :blog_body, class: 'form-control', rows: 20, placeholder: 'Contenido del blog' %>
   </div>
 
-
+  <div class="form-group">
+    <%= form.radio_button :status, 'draft' %>
+    <%= form.label :status, 'Borrador' %>
+    <br>
+    <%= form.radio_button :status, 'published' %>
+    <%= form.label :status, 'Publicado' %>
+  </div>
 
   <div class="form-group">
     <%= form.submit "Publicar artículo", class: "btn btn-outline-primary btn-lg btn-block" %>
