--- a/app/assets/stylesheets/portfolios.scss
+++ b/app/assets/stylesheets/portfolios.scss
@@ -3,7 +3,9 @@
 @import "gritter";
 
 body {
-  min-height: 75rem; /* Can be removed; just added for demo purposes */
+  min-height: 75rem; 
+
+
 }
 
 .navbar {
@@ -11,7 +13,7 @@ body {
 }
 
 .jumbotron {
-  padding-top: 6rem;
+  padding-top: 3rem;
   padding-bottom: 6rem;
   margin-bottom: 0;
   background-color: #fff;
@@ -28,13 +30,14 @@ body {
 .jumbotron .container {
   max-width: 80rem;
   min-width: 60rem;
+
 }
 
 .album {
-  min-height: 50rem; /* Can be removed; just added for demo purposes */
+  min-height: 50rem; 
   padding-top: 3rem;
   padding-bottom: 3rem;
-  background-color: #f7f7f7;
+  background-color: #292B2C;
 }
 
 .card {
@@ -69,6 +72,6 @@ footer p {
 }
 
 .portfolio-form {
-  padding: 20px 150px;
+  padding: 10px 150px;
 
 }
