--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <%= csrf_meta_tags %>
     <meta name="keywords" content="<%= @seo_keywords %>" >
 
-    <%= favicon_link_tag 'favicons/favicon4.ico' %>
+    <%= favicon_link_tag 'favicons/favicon.ico' %>
     <link href="https://fonts.googleapis.com/css?family=Aldrich" rel="stylesheet">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
